--- a/testMavenProjectSelenium/pom.xml
+++ b/testMavenProjectSelenium/pom.xml
@@ -5,4 +5,62 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>POC on Maven</name>
   <description>POC on Maven</description>
+  
+  <!-- Change from here -->
+ 
+<packaging>jar</packaging>
+ 
+<properties>
+<suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
+ 
+</properties>
+ 
+<dependencies>
+ 
+<dependency>
+<groupId>org.testng</groupId>
+<artifactId>testng</artifactId>
+<version>6.1.1</version>
+</dependency>
+<!-- Adding Selenium dependency -->
+<dependency>
+ <groupId>org.seleniumhq.selenium</groupId>
+ <artifactId>selenium-java</artifactId>
+ <version>2.47.1</version>
+</dependency> 
+ 
+</dependencies>
+ 
+<build>
+ 
+<plugins>
+ 
+<plugin>
+ 
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.0</version>
+<configuration>
+<compilerVersion>1.8</compilerVersion>
+<source>1.6</source>
+<target>1.6</target>
+</configuration>
+</plugin>
+ 
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.17</version>
+<configuration>
+ 
+<suiteXmlFiles>
+<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+</suiteXmlFiles>
+ 
+</configuration>
+</plugin>
+ 
+</plugins>
+ 
+</build>
 </project>
